--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -615,6 +615,7 @@
     <addaction name="action3D_Solar_system"/>
     <addaction name="actionActual_weather"/>
     <addaction name="menuPlanet_satellite"/>
+    <addaction name="actionMoonless_nights"/>
    </widget>
    <widget class="QMenu" name="menu_Telescope">
     <property name="title">
@@ -860,7 +861,7 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>278</width>
+          <width>274</width>
           <height>314</height>
          </rect>
         </property>
@@ -1065,7 +1066,7 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>308</width>
+          <width>331</width>
           <height>669</height>
          </rect>
         </property>
@@ -1536,7 +1537,7 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>397</width>
+          <width>451</width>
           <height>520</height>
          </rect>
         </property>
@@ -1822,7 +1823,7 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>278</width>
+          <width>254</width>
           <height>314</height>
          </rect>
         </property>
@@ -2254,6 +2255,14 @@
         </layout>
        </widget>
        <widget class="QWidget" name="page_6">
+        <property name="geometry">
+         <rect>
+          <x>0</x>
+          <y>0</y>
+          <width>268</width>
+          <height>314</height>
+         </rect>
+        </property>
         <attribute name="label">
          <string>Date/Time</string>
         </attribute>
@@ -2543,7 +2552,7 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>261</width>
+          <width>237</width>
           <height>431</height>
          </rect>
         </property>
@@ -2646,7 +2655,7 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>278</width>
+          <width>254</width>
           <height>314</height>
          </rect>
         </property>
@@ -2794,7 +2803,7 @@ p, li { white-space: pre-wrap; }
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>278</width>
+          <width>468</width>
           <height>314</height>
          </rect>
         </property>
@@ -4808,6 +4817,11 @@ p, li { white-space: pre-wrap; }
    </property>
    <property name="toolTip">
     <string>Insert finderscope FOV</string>
+   </property>
+  </action>
+  <action name="actionMoonless_nights">
+   <property name="text">
+    <string>Moonless nights...</string>
    </property>
   </action>
  </widget>
