--- a/resource.qrc
+++ b/resource.qrc
@@ -120,5 +120,6 @@
         <file>res/ico_finder.png</file>
         <file>res/ico_pfeatures.png</file>
         <file>res/ico_help.png</file>
+        <file>res/star_glow.png</file>
     </qresource>
 </RCC>
